Bug 1859830 Part 1 - Apply resolved page style for :first @page, even if it has no specified page name r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D191767